# WyvernChess

./: .gitignore  CMakeLists.txt  README.md  main  makefile
src/: CMakeLists.txt  evaluate.cpp  evaluate.h  magicbb.cpp  magicbb.h  main.cpp  movegen.cpp  movegen.h  position.cpp  position.h  search.cpp  search.h  transposition.cpp  transposition.h  types.h  utils.cpp  utils.h  zobrist.cpp  zobrist.h  zobrist_generate.cpp
tests/: CMakeLists.txt  perft_tests.cpp
